--- a/CSS S2/Color CSS.html
+++ b/CSS S2/Color CSS.html
@@ -10,6 +10,6 @@
     <p style="color: #ff0000;"></p>
     <p style="color: rgb(255,0,0);">ABES</p>
     <p style="color: rgb(0,255,0);">ABES</p>
-    <p style="color: rgba(255,0,0,0);">CSE-29</p>
+    <p style="color: rgba(165, 3, 3, 0.497);">CSE-29</p>
 </body>
 </html>
